# C--Learn

./: .gitignore  README.md
ArrayTransmit/: ArrayTransmit.sln
ArrayTransmit/ArrayTransmit/: ArrayTransmit.vcxproj  ArrayTransmit.vcxproj.filters  array.cpp
Base64Demo/: Base64Demo.sln  Base64Demo.sln.old  Base64Demo.suo.old  UpgradeLog.XML
Base64Demo/Base64Demo/: 1.docx  2.docx  Base64Demo.vcproj  Base64Demo.vcxproj  Base64Demo.vcxproj.filters  main.cpp
CallBackDemo/: CallBackDemo.sln
CallBackDemo/CallBackDemo/: CallBackDemo.vcxproj  main.cpp
CharacterTypeConversion/: CharacterTypeConversion.sln
FtpActiveX/: FtpActiveX.sln  compile.bat  index.html  index.js
FtpActiveX/FtpActiveX/: FtpActiveX.aps  (+19 more)
HttpsLibCurlTest/: HttpsLibCurlTest.sln  HttpsLibCurlTest.vcxproj  HttpsLibCurlTest.vcxproj.filters  Release.rar  libpackTest.cpp  main.cpp  test.cpp
LoadLibraryDemo/: LoadLibraryDemo.sln
MFC_Load_PictureTest/: MFC_Load_PictureTest.sln
MapUerINFO/: MapUerINFO.sln
OcxTest/: OcxTest.sln
SelfLearn/: SelfLearn.sln
access/dbix/prj_linux/: Makefile.am  autogen.sh  configure.ac
algorithm/: readme.txt
array/: array.sln
boka_dll_test/: boka_dll_test.sln
libcurlPack/: libcurlPack.cpp  libcurlPack.h  libcurlPack.sln  libcurlPack.vcxproj  libcurlPack.vcxproj.filters
mwplayer/: mwplayer.sln
ocxFuncTest/: ocxFuncTest.sln
onlytest/: onlytest.sln
paintDemo/: paintDemo.sln
svrmwplayer/: svrmwplayer.sln
testcocooc/: testcocooc.sln
topicmngctrl/: compile_linux.bat  compile_linux64.bat
xmlTest/: xmlTest.sln
工具/: NSIS.rar  address_calculator.xls
(+554 files in other folders)
